# phoenix-ml

./: CMakeLists.txt  README.md  licence
Test/: CMakeLists.txt  matvec.cpp  test.cpp
app/: CMakeLists.txt  data.txt  main.cpp
src/: Matrix.h
